tests/typing/bad/testfile-undefined-6.go
package main

func main() { x := x + 1 }
